# sentiment.ai

./: .gitignore  LICENSE  README.md  v2-roadmap.md
default_embeddings/: readme.txt
docs/: Generate Badge.R  header.html  index.html  index.rmd  simplified.html  simplified.rmd  theme-acid.Rnw  theme-acid.tex
docs/test/: azure_scores-12084-rows.csv  azure_tweet_scores.rds  default_orig_xlarge.csv  dict_scores.rds  dict_tweet_scores.rds  make_benchmarks.R  sentiment_ai_scores.rds  sentimentai_tweet_scores.rds  sentimentr_tweet_scores.rds
docs/test/serialized/: md_history.RDS
docs/www/css/: custom.css
docs/www/js/: collapsible.js
models/: available_models.csv  readme.txt
models/glm/1.0/: en.csv  en.large.csv  en.rds  metrics.json  multi.csv  multi.large.csv  multi.large.rds  multi.rds
models/xgb/1.0/: metrics.json
planning/: NEWS-v2-draft.md  SESSION-SUMMARY.md  benchmark-v2.md  benchmark_holdout_roberta.py  benchmark_multilingual.py  benchmark_python.py  benchmark_python_results.json  benchmark_results.rds  better-lens-brand.md  better-lens-nlp.md  better-lens-practitioner.md  better-lens-psychometric.md  better-lens-rcraft.md  better-sentiment-roadmap.md  codex-review-2026-06-05.md  cran-checklist.md  docs-benchmark-page-spec.md  holdout_results.json  honest-copy-rewrites.md  licenses-and-notice.md  multilingual_corpus.json  multilingual_results.json  og-textgraph-design.md  og-textgraph-naming.md  real-neutral-eval-plan.md  reliability-report.md  repo-review-arch.md  repo-review-ds.md  repo-review-dx.md  repo-review-mlops.md  repo-review-rpkg.md  repo-review-shiplead.md  repo-review-synthesis.md  review-lineup.md  review-methodology.md  review-migration.md  run_benchmarks.R  snapshot-tests-draft.md  use-vendoring-plan.md  v2-test-plan.md
pubs/: README.md  joss-paper-draft.md  neutral-finding-paper.md
pypackage/: .gitignore  PARITY.md  README.md  pyproject.toml
pypackage/sentimentai/: __init__.py  _hf_classifier.py  _models.py  _profiles.py  _scoring.py  _version.py  embedding.py  install.py  plot.py  sentiment.py
pypackage/sentimentai/scoring/auxiliary/: hate_e5-small.json  hate_openai.json  mixed_e5-base.json  mixed_e5-small.json
pypackage/sentimentai/scoring/logistic/1.0/: e5-base.json  e5-small.json
pypackage/sentimentai/scoring/mlp/1.0/: e5-base.json
pypackage/sentimentai/scoring/mlp/2.0/: e5-small.json
pypackage/tests/: test_plot.py  test_profiles.py  test_scoring_parity.py  test_sentiment_match.py  test_sentiment_tidy.py  test_smoke.py
pypackage/tests/fixtures/: parity_e5-small_mlp.json
r package/sentiment.ai/: .Rbuildignore  DESCRIPTION  default_large.csv  default_long.csv  default_short.csv  save_default_data.R
r package/sentiment.ai/Python/: get_embedder.py
r package/sentiment.ai/R/: default_data.R  get_sentiment.R  init_and_install.R  make_lookup_table.R  matrix_helpers.R
r package/sentiment.ai/data/: default.RData  default_small.RData
rpackage/sentiment.ai/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  cran-comments.md  default_short.csv  default_xlarge.csv  get_embedder_v2.py  m2_mbp_requirements.txt  m3_mbp_requirements.txt  sentiment.ai.Rproj
rpackage/sentiment.ai/R/: agreement.R  choose_model.R  constants.R  create_error_text.R  data-default_data.R  data-example_data.R  default_data.R  diagnostics.R  embedding.R  globals.R  init_and_install.R  local_from_reticulate.R  matrix_helpers.R  model_meta.R  object-sentiment_ai_embed.R  object-sentiment_env.R  onload.R  package-sentiment_ai.R  plot.R  profiles.R  provenance.R  sentiment.R  utils-data-table.R
rpackage/sentiment.ai/data/: airline_tweets.rda  default.RData  default.rda  default_embeddings.RData  default_embeddings.rda  hash_table.rda
rpackage/sentiment.ai/data-raw/: default_large.csv  default_medium.csv  default_short.csv  default_xlarge.csv  make_test_fixtures.R  save_default_data.R  save_default_embeddings.R  save_default_models.R  save_example_data.R
rpackage/sentiment.ai/inst/: NOTICE.md  default_poles.json  get_embedder.py
rpackage/sentiment.ai/inst/centroids/: e5-base.json  e5-small.json
rpackage/sentiment.ai/inst/default_embeddings/: readme.txt
rpackage/sentiment.ai/inst/python/: requirements.txt
rpackage/sentiment.ai/inst/scoring/: readme.txt
rpackage/sentiment.ai/man/: airline_tweets.Rd  as_py_list.Rd  configure_sentiment.ai.Rd  default.Rd  default_embeddings.Rd  dot-activate_env.Rd  dot-bandaid.Rd  dot-cosine_lookup.Rd  dot-hash_match.Rd  dot-match_all.Rd  dot-match_each.Rd  dot-reference_embed.Rd  dot-sentiment_probs.Rd  embed_pos_neg.Rd  embed_text.Rd  find_sentiment_probs.Rd  get_default_embedding.Rd  get_defualt_embedding.Rd  hash_match.Rd  hub_embed.Rd  install_default_embeddings.Rd  install_scoring_model.Rd  load_openai_embedding.Rd  matrix_similarity.Rd  openai_embed.Rd  plot_sentiment.Rd  read_embedding.Rd  sentiment.Rd  sentiment.ai-package.Rd  sentiment.ai_embed.Rd  sentiment.env.Rd  sentiment_agreement.Rd  sentiment_centroids.Rd  sentiment_diagnostics.Rd  sentiment_easy.Rd  sentiment_match.Rd  sentiment_model.Rd  sentiment_profiles.Rd  sentiment_provenance.Rd  sentiment_score.Rd  (+4 more)
rpackage/sentiment.ai/tests/: testthat.R
rpackage/sentiment.ai/tests/testthat/: helper-skips.R  test-agreement.R  test-backend-e5.R  test-backend-openai.R  test-choose-model.R  (+25 more)
rpackage/sentiment.ai/vignettes/: vignette.Rmd
test/: text_plus_pro_con.csv
(+14 files in other folders)
