[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentimentai-py"
version = "0.1.0a2"  # ALPHA pre-release: engine works; e5 heads are full-data (0.86 / 0.92 real-only macro-F1)
description = "Simple, tunable sentiment analysis from sentence embeddings — TensorFlow-free. Python sibling of the R package sentiment.ai."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ben Wiseman", email = "benjamin.h.wiseman@gmail.com" }]
keywords = ["sentiment", "nlp", "embeddings", "sentence-transformers", "multilingual"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime deps. The scoring head is pure numpy (ships in the wheel) — no xgboost, no
# TensorFlow at serve. The engine is already Python, so there is no reticulate bridge.
dependencies = [
  "numpy>=1.21",
  "sentence-transformers>=2.2",   # on-device e5 embedders (default backend)
  "huggingface-hub>=0.16",        # embedder download/cache on first use
]

[project.optional-dependencies]
openai = ["requests>=2.28"]        # optional paid OpenAI embedding backend
dev = ["pytest>=7", "ruff"]

[project.urls]
Homepage = "https://benwiseman.github.io/sentiment.ai/"
Source = "https://github.com/BenWiseman/sentiment.ai"

[tool.setuptools.packages.find]
include = ["sentimentai*"]

# the small JSON scoring heads + the shared default poles ship inside the wheel
# (same artifacts the R package bundles)
[tool.setuptools.package-data]
sentimentai = ["scoring/**/*.json", "default_poles.json"]
